fix delete endpoints, api docs, and lot of stuff
